Fixed bugs with images, fixed bug with wrong color of pagination for feedback section, fixed bug with focus, other minor fixes and improvements

--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -132,5 +132,4 @@
 
 .swiper-pagination-bullet {
   background-color: #080c09 !important;
-  opacity: 1;
 }
