--- a/src/css/furniture-list.css
+++ b/src/css/furniture-list.css
@@ -140,6 +140,7 @@
   }
 
   .furniture-gallery {
+    justify-content: start;
     flex-direction: row;
     flex-wrap: wrap;
   }
